[workspace]
resolver = "2"
members = [
    "rustscape",
    "crates/*"
]

[workspace.dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
thiserror = "1.0.64"
anyhow = "1.0.89"

[workspace.target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation"
]

[workspace.package."*".dependencies."*"]
optional = true

[profile.release]
opt-level = 3
debug = false
lto = true
strip = "debuginfo"
panic = "unwind"
incremental = false
codegen-units = 1
rpath = false
