[workspace]
resolver = "2"
members = [
    "rustscape",
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
thiserror = "1.0.64"
anyhow = "1.0.89"
log = "0.4.22"
simple_logger = "5.0.0"

[workspace.dependencies.windows]
version = "0.58.0"
features = [
    "default"
]
