[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustscape"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
thiserror = "1.0.64"
anyhow = "1.0.89"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
]

