[package]
name = "loader"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rustscape"
path = "src/main.rs"

[dependencies]
log = "0.4.22"
simple_logger = "5.0.0"
rust-embed = { version = "8.5.0", features = ["include-exclude", "compression", "interpolate-folder-path"] }
mktemp = "0.5.1"
obfstr = "0.4.3"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
]