cargo-features = ["different-binary-name"]

[package]
name = "rustscape"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "An Open-Source Third-Party Testing/Debugging Client and Tools for the Old School RuneScape native/NXT/C++ client"
authors = ["kyle-escobar"]
categories = ["games", "game-development", "memory-management", "game-engines", "data-structures"]
keywords = ["osrs", "nxt", "runescape", "oldschool", "client"]
repository = "https://github.com/kyle-escobar/rustscape.git"
rust-version = "1.80.0"

[[bin]]
name = "exe"
filename = "rustscape"
path = "src/main.rs"

[lib]
name = "dll"
filename = "rustscape"
crate-type = ["cdylib"]

[features]
default = ["impl-exe", "impl-dll"]
impl-exe = []
impl-dll = []

[dependencies]
