[package]
name = "macros"
version.workspace = true
edition.workspace = true

[features]
default = ["dllmain"]
dllmain = []

[lib]
name = "rustscape_macros"
proc-macro = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
syn = { version = "2.0.79", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.86"

[dependencies.windows]
workspace = true
optional = false
features = [
    "Win32_Foundation",
]